--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,25 @@
 {
   "version": 2,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"    // Main entry point is directly index.js
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://mernems.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
+    }
+  ],
   "builds": [
     {
       "src": "index.js",
       "use": "@vercel/node"
     }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
