--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"    // Main entry point is directly index.js
+      "dest": "/index.js"    
     }
   ],
   "headers": [
