--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT = 8000
 
-DATABASE_URL = "mongodb://localhost:27017/amsDB"
+# DATABASE_URL = "mongodb://localhost:27017/amsDB"
+DATABASE_URL = "mongodb+srv://amsDB:mdUeyOB2EESEhv02@cluster0.zsqfc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
 
 JWT_SECRET = "rajjoo@123#@!@!"
