--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,15 @@
 {
-<<<<<<< HEAD
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js"
-        }
-    ]
-}
-=======
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
+    {
+      "src": "/.*",
+      "dest": "app.js"
+    }
   ]
 }
->>>>>>> 03008215c838540fee6d82bc57871925e92e7e74
